# Codite

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IDEA.md  PLANNING.md  README.md
analyzer/: Cargo.toml  build.rs
analyzer/src/: lib.rs  main.rs  models.rs  parser.rs  scanner.rs
analyzer/src/parsers/: c.rs  cpp.rs  go.rs  import_resolver.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
analyzer/tests/: parsers_test.rs
analyzer/tests/fixtures/c/: helper.h  sample.c
analyzer/tests/fixtures/cpp/: math_utils.hpp  sample.cpp
analyzer/tests/fixtures/go/: imported.go  sample.go
analyzer/tests/fixtures/javascript/: sample.js
analyzer/tests/fixtures/python/: sample.py
analyzer/tests/fixtures/typescript/: nodenext.ts  sample.ts
docs/: railway-deployment.md
docs/plans/: 2026-05-09-remote-repo-scan-design.md  2026-05-09-remote-repo-scan-plan.md  2026-05-18-go-c-cpp-parsers-design.md  2026-05-18-go-c-cpp-parsers-plan.md  2026-05-18-go-c-cpp-parsers-walkthrough.md  task.md
docs/superpowers/plans/: 2026-05-08-typescript-javascript-visualization.md
docs/superpowers/specs/: 2026-05-08-folder-nodes-design.md  2026-05-08-typescript-javascript-visualization-design.md
docs/walkthroughs/: 2026-05-09-remote-repo-visualization.md
ui/: index.html  package-lock.json  package.json  server.js  server.ts  tsconfig.server.json
ui/public/: data.json
ui/src/: App.tsx  index.css
ui/src/components/: CodePreviewPanel.tsx  CommandPalette.tsx  FileExplorer.tsx  GraphView.tsx  RemoteScanner.tsx
ui/tests/: graphLayout.test.ts
(+4 files in other folders)
