[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"
authors = ["Nonbangkok"]
description = "Code Dependency Analyzer"

[package.metadata.codite]
default_scan_dir = ".."

[lib]
name = "analyzer"
path = "src/lib.rs"

[[bin]]
name = "analyzer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
walkdir = "2.5.0"
indicatif = "0.17"

[build-dependencies]
toml = "0.8"
